--- a/Dockerfile.latest
+++ b/Dockerfile.latest
@@ -1,8 +1,16 @@
 FROM alpine
-CMD ["/bin/sh"]
+
+ENV TZ=Europe/Rome \
+    OS=alpine
+
+LABEL maintainer="https://github.com/Neomediatech" \ 
+      org.label-schema.vcs-type=Git \
+      org.label-schema.vcs-url=https://github.com/Neomediatech/${REPO} \
+      org.label-schema.maintainer=Neomediatech
+
 RUN apk add --no-cache unbound openssl && rm -f /etc/unbound/unbound.conf
 COPY entrypoint.sh /usr/local/bin
 COPY unbound.conf /etc/unbound
 WORKDIR /etc/unbound
 ENTRYPOINT ["entrypoint.sh"]
-
+CMD ["/bin/sh"]
